fixed width issue
the email and subscribe input/button were too wide, i scaled them back so it looks nice

--- a/css/screen.css
+++ b/css/screen.css
@@ -347,5 +347,10 @@ form {
     margin: 0;
    }
 
+   form ol input[type="email"],
+   form ol input[type="text"],
+   form ol input[type="submit"] {
+    width: 80%;
+   }
 
 }
